--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todos",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://imashu001.github.io/rtodoss",
+  "homepage": "http://imashu001.github.io/rtodos",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
